--- a/package.json
+++ b/package.json
@@ -92,6 +92,12 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "moduleNameMapper": {
+      "^@common/(.*)$": "<rootDir>/common/$1",
+      "^@users/(.*)$": "<rootDir>/modules/users/$1",
+      "^@config/(.*)$": "<rootDir>/config/$1",
+      "^@prisma/(.*)$": "<rootDir>/prisma/$1"
+    }
   }
 }
