--- a/package.json
+++ b/package.json
@@ -96,8 +96,7 @@
     "moduleNameMapper": {
       "^@common/(.*)$": "<rootDir>/common/$1",
       "^@users/(.*)$": "<rootDir>/modules/users/$1",
-      "^@config/(.*)$": "<rootDir>/config/$1",
-      "^@prisma/(.*)$": "<rootDir>/prisma/$1"
+      "^@config/(.*)$": "<rootDir>/config/$1"
     }
   }
 }
