feat: Refactor roles and permissions management
- Drop `permissions` and `role_permissions` tables from the database.
- Add `primaryRole` field to the `User` model to simplify role assignment.
- Update `Role` model to remove permissions association.
- Seed script now creates base roles (USER, PROVIDER, ADMIN, MODERATOR) and handles admin user creation with role assignment.
- Enhance `UsersController` with role-based access control for user management endpoints.
- Add Swagger documentation for authentication and role-based access responses.

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,10 @@ GOOGLE_CALLBACK_URL=http://localhost:3333/auth/google/callback
 
 # Frontend URL
 FRONTEND_URL=http://localhost:3000
+
+# Seed data
+
+ADMIN_EMAIL=
+ADMIN_PASSWORD=
+ADMIN_FULLNAME=
+ADMIN_PHONE=
