--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "class-validator": "^0.14.3",
     "dotenv": "^17.3.1",
     "dotenv-expand": "^12.0.3",
+    "openai": "^6.22.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.18.0",
