--- a/.env.example
+++ b/.env.example
@@ -19,8 +19,12 @@ GOOGLE_CALLBACK_URL=http://localhost:3333/auth/google/callback
 # Frontend URL
 FRONTEND_URL=http://localhost:3000
 
-# Seed data
+# Azure Agent Configuration
+AZURE_AGENT_ENDPOINT=https://your-azure-endpoint.cognitiveservices.azure.com/openai/deployments/your-deployment/chat/completions?api-version=2025-01-01-preview
+AZURE_AGENT_API_KEY=your-azure-agent-api-key
+AZURE_AGENT_API_VERSION=2024-12-01-preview
 
+# Seed data
 ADMIN_EMAIL=
 ADMIN_PASSWORD=
 ADMIN_FULLNAME=
