feat(config): add CORS support and enhance security with compression and helmet
- Added CORS_ORIGINS to .env.example for configuring allowed origins.
- Integrated compression and helmet middleware in main.ts for improved security and performance.
- Updated app configuration to include CORS origins from environment variables.
- Adjusted production settings for CORS to restrict origins based on configuration.

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,7 @@ GOOGLE_CALLBACK_URL=http://localhost:3333/auth/google/callback
 
 # Frontend URL
 FRONTEND_URL=http://localhost:3000
+CORS_ORIGINS=http://localhost:3000
 
 # Azure Agent Configuration
 AZURE_AGENT_ENDPOINT=https://your-azure-endpoint.cognitiveservices.azure.com/openai/deployments/your-deployment/chat/completions?api-version=2025-01-01-preview
