feat(users): upload profile photos to Azure Blob Storage
   Add POST /users/me/profile-photo endpoint that accepts a multipart
   image file (JPEG/PNG/WebP, max 5 MB), uploads it to Azure Blob Storage,
   and saves the resulting URL to profilePhotoUrl.

   - Add BlobStorageService and BlobStorageModule in src/common
   - Add blob-storage.config.ts (AZURE_STORAGE_CONNECTION_STRING,
     AZURE_STORAGE_CONTAINER_NAME)
   - Inject BlobStorageService into UsersService (uploadProfilePhoto method)
   - Add file upload endpoint in UsersController with ParseFilePipe validation
   - Update UsersModule to import BlobStorageModule
   - Update .env.example with new Azure Storage variables
   - Reference secrets in ci.yml (test steps) and docker-publish.yml
     (az containerapp update --set-env-vars)

--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,10 @@ AZURE_AGENT_ENDPOINT=https://your-azure-endpoint.cognitiveservices.azure.com/ope
 AZURE_AGENT_API_KEY=your-azure-agent-api-key
 AZURE_AGENT_API_VERSION=2024-12-01-preview
 
+# Azure Storage (Blob Storage para fotos de perfil)
+AZURE_STORAGE_CONNECTION_STRING=DefaultEndpointsProtocol=https;AccountName=your-account;AccountKey=your-key;EndpointSuffix=core.windows.net
+AZURE_STORAGE_CONTAINER_NAME=profile-photos
+
 # Seed data
 ADMIN_EMAIL=
 ADMIN_PASSWORD=
