--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.6",
+    "@azure/storage-blob": "^12.26.0",
     "@prisma/adapter-pg": "^6.1.0",
     "@prisma/client": "^6.1.0",
     "bcrypt": "^6.0.0",
@@ -73,6 +74,7 @@
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
     "@types/bcrypt": "^6.0.0",
+    "@types/multer": "^1.4.12",
     "@types/compression": "^1.8.1",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
