--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "docker:prisma:studio": "docker-compose -f docker-compose.dev.yml up -d prisma-studio"
   },
   "dependencies": {
+    "@nestjs/axios": "^4.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.3",
     "@nestjs/core": "^11.0.1",
@@ -51,6 +52,7 @@
     "@nestjs/swagger": "^11.2.6",
     "@prisma/adapter-pg": "^6.1.0",
     "@prisma/client": "^6.1.0",
+    "axios": "^1.13.6",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
